Before Posting to Heroku

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -32,11 +32,11 @@
                     <hr class="small">
                     <div class="row">
                     <div>
-                        <iframe style="border: 0; width: 500px; height: 550px;" src="https://bandcamp.com/EmbeddedPlayer/album=1066930585/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="http://osmin.bandcamp.com/album/el-jovito">El Jovito by Osmin</a></iframe>
+                        <iframe style="border: 0; width: 500px; height: 500px;" src="https://bandcamp.com/EmbeddedPlayer/album=1066930585/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="http://osmin.bandcamp.com/album/el-jovito">El Jovito by Osmin</a></iframe>
                     </div>
 
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
+                    <a href="https://osmin.bandcamp.com/album/el-jovito" class="btn btn-dark">View in Bandcamp</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
