--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -2,3 +2,12 @@
     text-align: center;
     border: 3px solid green;
 }
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
