posting to heroku after making some minor changes

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -18,12 +18,18 @@
     <section id="about" class="about">
     <div class="row">
         <div class="col-lg-12 text-center">
-            
-            <a href="#" class="btn btn-lg btn-dark">Contact Me</a>
-            <a href="#" class="btn btn-lg btn-dark">Reviews</a>
+            <a href="#contact" class="btn btn-lg btn-dark" >Contact Me</a>
+            <a href="#" class="btn btn-lg btn-dark">Music Reviews</a>
             <a href="#services" class="btn btn-lg btn-dark">Shows</a>
         </div>
     </div>
+
+
+
+
+
+
+
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
@@ -78,6 +84,8 @@
         </div>
         <!-- /.container -->
     </section>
+
+    
 
 
 
