--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,11 +70,32 @@
 
 
         <!-- Footer -->
-        <footer>
+        <footer id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <p class="text-muted">Copyright &copy; Osmin 2017</p>
+                        <h4><strong>Osmin</strong>
+                        </h4>
+                        <p>Elgin</p>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
+                            <li><i class="fa fa-envelope-o fa-fw"></i> <img src="http://safemail.justlikeed.net/e/0e4f562688daea184468a7bbcb3ae7b0.png" border="0" align="absbottom" title="Email image created with safemail.justlikeed.net">
+                            </li>
+                        </ul>
+                        <br>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            </li>
+                        </ul>
+                        <hr class="small">
+                        <p class="text-muted"> &copy; Osmin 2017</p>
                     </div>
                 </div>
             </div>
