--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -2,7 +2,7 @@
 <header id="top" class="header">
     <div class="text-vertical-center">
         <h1>Osmin</h1>
-        <h3>I like music &amp; and vegan stuff</h3>
+        <h3>I like music &amp; vegan stuff</h3>
         <br>
         <a href="#about" class="btn btn-dark btn-lg glyphicon glyphicon-menu-down"></a>
     </div>
